[feedback-ui-fixes] zoom widget alignment problem fixed.

--- a/plugins/star-rating/frontend/public/stylesheets/main.css
+++ b/plugins/star-rating/frontend/public/stylesheets/main.css
@@ -1,5 +1,7 @@
 .routename-star .zoom {
-    display: none;
+    margin: 5% 0 0 35%;
+    position: absolute;
+    z-index: 999;
 }
 .routename-star #dashboard-graph-time {
     font-family: Oswald;
